<resources>
    <string name="app_name">ShowProduction</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="message_input">信息录入</string>
    <string name="complete">完成</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birth">生日</string>
    <string name="phone">电话</string>
    <string name="production_detail">商品详细</string>
    <string name="phone_number">请输入手机号</string>
    <string name="key_word">输入关键字</string>
    <string name="choose_date">请选择时间</string>
    <string name="shop_car">购物车</string>
    <string name="audio_tip">商品介绍录音：</string>
    <string name="product_detail">商品详细</string>
    <string name="product_name">名称</string>
    <string name="product_price">价格 :</string>
    <string name="product_area">产地 : </string>
    <string name="product_weight">重量 : </string>
    <string name="product_character">特性 : </string>
    <string name="product_biref">简介 : </string>
    <string name="tips">———— 继续拖动，查看图文信息 ————</string>

</resources>
