<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="0"
            android:stretchColumns="0"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:weightSum="4">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="@string/product_name"/>
                <TextView
                    android:id="@+id/name"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="2222"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:weightSum="4">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="@string/product_price"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="2222"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:weightSum="4">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="@string/product_biref"/>
                <TextView
                    android:id="@+id/biref"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="2222"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:weightSum="4">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="@string/product_character"/>
                <TextView
                    android:id="@+id/character"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="2222"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:weightSum="4">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="@string/product_area"/>
                <TextView
                    android:id="@+id/area"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="2222"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:weightSum="4">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="@string/product_weight"/>
                <TextView
                    android:id="@+id/weight"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="0.5dp"
                    android:background="@color/white"
                    android:textSize="20dp"
                    android:text="2222"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
